[project]
name = "topsis-core"
version = "1.0.0"
description = "A command-line tool implementing the TOPSIS multi-criteria decision-making algorithm."
readme = "README.md"
authors = [
    { name = "HarshitCodes16", email = "hkatyal_be23@thapar.edu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
topsis = "topsis_core:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
